--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       var userSword2Flipped;
       
 			loader.load(
-      "http://127.0.0.1:8887/sword2.glb",
+      "models/sword2.glb",
       function( gltf ) {
         var scale = 40;
         userSword = gltf.scene;
